[tool.poetry]
name = "tiramisu-rl-env"
version = "0.1.0"
description = ""
authors = ["Djamel Rassem LAMOURI <dl5133@nyu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
ray = { extras = ["rllib"], version = "^2.3.1" }
numpy = "^1.24.2"
sympy = "^1.11.1"
torch = "^2.0.0"
pandas = "^1.5.3"
tensorflow-probability = "^0.19.0"
tqdm = "^4.65.0"
protobuf = ">=3.20.0,<3.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
autopep8 = "^2.0.2"
ipykernel = "^6.22.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
